some small additions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="menu">Menu</string>
     <string name="bestdeal">Best Deal</string>
-    <string name="desert">Desert</string>
+    <string name="dessert">Dessert</string>
     <string name="location">Location</string>
     <string name="recommend">Recommendation</string>
 
