--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="next">NEXT</string>
     <string name="already">Already Have an Account?</string>
     <string name="cam">Camera</string>
+    <string name="search_name">Search Name</string>
 </resources>
